--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2992,7 +2992,7 @@ textarea.form-control-lg {
 }
 
 .btn {
-  display: inline-block;
+  display: inline;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
@@ -3032,6 +3032,7 @@ textarea.form-control-lg {
   color: #fff;
   background-color: #0d6efd;
   border-color: #0d6efd;
+  margin-left: 10px;
 }
 .btn-primary:hover {
   color: #fff;
@@ -4046,15 +4047,16 @@ textarea.form-control-lg {
   display: flex;
   flex-wrap: inherit;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 .navbar-brand {
-  padding-top: 0.3125rem;
-  padding-bottom: 0.3125rem;
-  margin-right: 1rem;
   font-size: 1.25rem;
   text-decoration: none;
   white-space: nowrap;
+  padding-right: var(--bs-gutter-x, 0.75rem);
+  padding-left: var(--bs-gutter-x, 0.75rem);
+  margin-right: auto;
+  margin-left: auto;
 }
 .navbar-nav {
   display: flex;
